kustomize/overlays/prd/app_deployment.patch.yaml
# Patch using Path Strategic Merge: https://kubectl.docs.kubernetes.io/references/kustomize/kustomization/patches/#patch-using-path-strategic-merge
# patchファイルでは apiVersion, kind, metadata.name を指定して、パッチを適用するリソースを特定します。
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timecard-app
spec:
  template:
    spec:
      containers:
      - name: timecard-app
        image: 674582907715.dkr.ecr.ap-northeast-1.amazonaws.com/kintaro/prd/app:20240624.2356
        command: ["poetry", "run", "uvicorn", "app:app", "--workers", "2", "--host", "0.0.0.0", "--port", "8080"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
